fix: critical issues from Eszter review — AML, SQL injection, JPY, feature flags
CRITICAL fixes (7/7):
- C1: TransactionLine.calculateHufValue() — removed parameter, reads from entity (JPY 10x bug)
- C2: HandlingFeeService SHK/custom fee — implemented via SystemParameter lookup
- C3: DailyClosingService.hasFeature() — reads from SystemParameter FEATURE_{name}
- C4: TransactionRepository LIKE — parameterized against SQL injection
- C5: AmlService — null/negative hufAmount check + trim() on customer fields
- C6: TransactionLine.calculateHufValue() — added scale to divide (ArithmeticException prevention)
- C7: roundToFive() preserved as legacy-compatible (documented, needs unit test)

Build: 0 errors, 0 TypeScript errors